[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "tartufo"
version = "2.0.0-dev1"
description = "tartufo is a tool for scanning git repositories for secrets/passwords/high-entropy data"
authors = ["Dylan Ayrey <dxa4481@rit.edu>"]
maintainers = ["GoDaddy <oss@godaddy.com>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/godaddy/tartufo/"
documentation = "https://tartufo.readthedocs.io/"
keywords = ["git", "security", "secrets", "entropy", "scanner"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Security",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
include = ["CHANGELOG.md", "README.md"]

[tool.poetry.scripts]
tartufo = "tartufo.cli:main"

[tool.poetry.dependencies]
python = "^3.5"
click = "^7"
colorama = {version = "*", markers = "sys_platform == 'win32'"}
GitPython = ">= 2.1.1, <4.0.0"
toml = "^0.10"
truffleHogRegexes = "^0.0.7"

[tool.poetry.dev-dependencies]
black = {version = "19.10b0", allow-prereleases = true, python = "^3.6"}
coverage = {extras = ["toml"], version = "^5.1"}
pre-commit = "*"
pytest = "^5.4.1"
pytest-sugar = "^0.9.3"
mypy = "^0.770"
recommonmark = "^0.6"
sphinx = "^2.3"
sphinx-rtd-theme = "^0.4.3"
pytest-cov = "^2.8.1"
tox = "^3.14.6"
vulture = "^1.4"

[tool.tartufo]
repo-path = "."
json = false
cleanup = true
regex = true
entropy = true
exclude-paths = ".tartufo-excludes"

[tool.black]
target-version = ['py35', 'py36', 'py37', 'py38']
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
)/
'''

[tool.pytest]
# Not yet supported, see https://github.com/pytest-dev/pytest/issues/1556

[tool.mypy]
# Not yet supported, see https://github.com/python/mypy/issues/5205
